--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.1.5"
+    "astro": "^1.1.5",
+    "lucide-react": "^0.454.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^1.0.0"
