--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.2",
     "astro": "^1.1.5",
     "lucide-react": "^0.454.0"
   },
